[AAA-442-FED] : Modal bug, when the modal is invoked it shifts the navigation and sticky nav over 10 pixels fixed

--- a/html-prototype/clientlibs/aaa-core/base/less/base.less
+++ b/html-prototype/clientlibs/aaa-core/base/less/base.less
@@ -104,6 +104,11 @@ a {
     margin-left: 5px;
 }
 
+.modal-open .sticky-navbar{
+	    position: relative;
+   	    left: -8px;
+}
+
 .modal-header .close {
     margin-top: -80px;
     margin-right: -80px;
